[package]
name = "rcpr"
version = "0.1.0"
authors = ["Jarat <drobny2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
ndarray-linalg = {version = "0.12.1", features=["netlib"]}
time = ""
cached_proc_macro = "0.4.0"
cached = "0.19.0"

[lib]
crate-type = ["rlib"]
