[package]
name = "rcpr"
version = "0.2.0"
authors = ["Jarat <jdrobny@tae.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
cached_proc_macro = "0.4.0"
cached = "0.19.0"
anyhow = "1.0"

[lib]
crate-type = ["rlib"]

[features]